// Source: Fashion.proto
// Tool: OverfieldTool

syntax = "proto3";

option go_package = "./;excel";
package excel;

message AllFashionDatas {
  FashionInfoDatas FashionInfo = 1;
}

message FashionInfoDatas {
  repeated FashionInfoConfigure Datas = 1;
}

message FashionInfoConfigure {
  int32 ID = 1;
  int32 ItemID = 2;
  int32 OnlyCharacterID = 3;
  string AssetFullName = 4;
  repeated int32 HideHat = 5;
  repeated int32 HideOrn = 6;
  repeated int32 HideBraid = 7;
  int32 NewSexType = 8;
  int32 NewFashionType = 9;
}
